--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 venv
+/Users/krishjoshi/Desktop/Projects/UFC_Scraping/ufcscrape/ufcscrape/__pycache__
+/Users/krishjoshi/Desktop/Projects/UFC_Scraping/ufcscrape/ufcscrape/spiders/__pycache__
