Ignore pycache folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 venv
-/Users/krishjoshi/Desktop/Projects/UFC_Scraping/ufcscrape/ufcscrape/__pycache__
-/Users/krishjoshi/Desktop/Projects/UFC_Scraping/ufcscrape/ufcscrape/spiders/__pycache__
+__pycache__
